03_kafkaui/02_kafka_ui_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: kafka-ui-service
  namespace: trailblazers
spec:
  ipFamilies:
    - IPv4
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: kafka-ui
